--- a/web/service/config.json
+++ b/web/service/config.json
@@ -18,24 +18,71 @@
       "tag": "api"
     }
   ],
-  "outbounds": [
-    {
-      "protocol": "freedom",
-      "settings": {}
-    },
-    {
-      "protocol": "blackhole",
-      "settings": {},
-      "tag": "blocked"
-    }
-  ],
   "policy": {
     "system": {
       "statsInboundDownlink": true,
       "statsInboundUplink": true
     }
   },
+  "outbounds": [
+    {
+      "protocol": "blackhole",
+      "settings": {},
+      "tag": "blocked"
+    },
+    {
+      "tag": "ipv4-out",
+      "protocol": "freedom",
+      "settings": {}
+    },
+    {
+      "tag": "ipv6-out",
+      "protocol": "freedom",
+      "settings": {
+        "domainStrategy": "UseIPv6"
+      }
+    },
+    {
+      "tag": "socks5-warp",
+      "protocol": "socks",
+      "settings": {
+        "servers": [
+          {
+            "address": "127.0.0.1",
+            "port": 40000
+          }
+        ]
+      }
+    },
+    {
+      "tag": "wireguard-warp",
+      "protocol": "wireguard",
+      "settings": {
+        "secretKey": "GAl2z55U2UzNU5FG+LW3kowK+BA/WGMi1dWYwx20pWk=",
+        "address": [
+          "172.16.0.2/32",
+          "2606:4700:110:8f0a:fcdb:db2f:3b3:4d49/128"
+        ],
+        "peers": [
+          {
+            "publicKey": "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo=",
+            "allowedIPs": [
+              "0.0.0.0/0",
+              "::/0"
+            ],
+            "endpoint": "engage.cloudflareclient.com:2408"
+          }
+        ],
+        "reserved": [
+          230,
+          25,
+          169
+        ]
+      }
+    }
+  ],
   "routing": {
+    "domainStrategy": "AsIs",
     "rules": [
       {
         "inboundTag": [
@@ -57,6 +104,32 @@
           "bittorrent"
         ],
         "type": "field"
+      },
+      {
+        "type": "field",
+        "outboundTag": "socks5-warp",
+        "domain": [
+          "ip.gs"
+        ]
+      },
+      {
+        "type": "field",
+        "outboundTag": "wireguard-warp",
+        "domain": [
+          "chat.openai.com"
+        ]
+      },
+      {
+        "type": "field",
+        "outboundTag": "ipv6-out",
+        "domain": [
+          "ipget.net"
+        ]
+      },
+      {
+        "type": "field",
+        "outboundTag": "ipv4-out",
+        "network": "udp,tcp"
       }
     ]
   },
