--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 .idea
 tmp
-bin/xray-darwin-arm64
-bin/config.json
 dist/
 x-ui-*.tar.gz
-/x-ui
-/release.sh
+x-ui/
+bin/
+release.sh
 .sync*
-oryxBuildBinary
