--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
@@ -24,7 +24,7 @@ jobs:
   linuxamd64build:
     name: build x-ui amd64 version
     needs: release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Set up Go
@@ -65,7 +65,7 @@ jobs:
   linuxarm64build:
     name: build x-ui arm64 version
     needs: release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Set up Go
@@ -108,7 +108,7 @@ jobs:
   linuxs390xbuild:
     name: build x-ui s390x version
     needs: release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Set up Go
