--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,8 @@ jobs:
           go-version: 1.20.3
       - name: build linux amd64 version
         run: |
+          apt-get update
+          apt install -y sudo curl wget ca-certificates
           CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o xui-release -v main.go
           mkdir x-ui
           cp xui-release x-ui/xui-release
@@ -79,8 +81,8 @@ jobs:
           go-version: 1.20.3
       - name: build linux arm64 version
         run: |
-          sudo apt-get update
-          sudo apt install gcc-aarch64-linux-gnu
+          apt-get update
+          apt install -y sudo curl wget ca-certificates gcc-aarch64-linux-gnu
           CGO_ENABLED=1 GOOS=linux GOARCH=arm64 CC=aarch64-linux-gnu-gcc go build -o xui-release -v main.go
           mkdir x-ui
           cp xui-release x-ui/xui-release
@@ -124,8 +126,8 @@ jobs:
           go-version: 1.20.3
       - name: build linux s390x version
         run: |
-          sudo apt-get update
-          sudo apt install gcc-s390x-linux-gnu -y
+          apt-get update
+          apt install -y sudo curl wget ca-certificates gcc-s390x-linux-gnu
           CGO_ENABLED=1 GOOS=linux GOARCH=s390x CC=s390x-linux-gnu-gcc go build -o xui-release -v main.go
           mkdir x-ui
           cp xui-release x-ui/xui-release
