--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: build linux amd64 version
         run: |
           apt-get update
-          apt install -y sudo curl wget ca-certificates
+          apt install -y sudo curl wget unzip ca-certificates
           CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -o xui-release -v main.go
           mkdir x-ui
           cp xui-release x-ui/xui-release
@@ -82,7 +82,7 @@ jobs:
       - name: build linux arm64 version
         run: |
           apt-get update
-          apt install -y sudo curl wget ca-certificates gcc-aarch64-linux-gnu
+          apt install -y sudo curl wget unzip ca-certificates gcc-aarch64-linux-gnu
           CGO_ENABLED=1 GOOS=linux GOARCH=arm64 CC=aarch64-linux-gnu-gcc go build -o xui-release -v main.go
           mkdir x-ui
           cp xui-release x-ui/xui-release
@@ -127,7 +127,7 @@ jobs:
       - name: build linux s390x version
         run: |
           apt-get update
-          apt install -y sudo curl wget ca-certificates gcc-s390x-linux-gnu
+          apt install -y sudo curl wget unzip ca-certificates gcc-s390x-linux-gnu
           CGO_ENABLED=1 GOOS=linux GOARCH=s390x CC=s390x-linux-gnu-gcc go build -o xui-release -v main.go
           mkdir x-ui
           cp xui-release x-ui/xui-release
