--- a/web/service/config.json
+++ b/web/service/config.json
@@ -93,7 +93,8 @@
       },
       {
         "ip": [
-          "geoip:private"
+          "geoip:private",
+          "geoip:cn"
         ],
         "outboundTag": "blocked",
         "type": "field"
